<resources>
    <string name="app_name">Playlist Maker</string>

    <string name="btn_search">Поиск</string>
    <string name="btn_settings">Настройки</string>
    <string name="btn_mlib">Медиатека</string>

    <string name="settings_dark_theme">Темная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_agreement">Пользовательское соглашение</string>
    <string name="terms_title">Соглашение</string>

    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="android_dev_link">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="my_email">Raizou@yandex.ru</string>
    <string name="support_subject_placeholder">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_msg_placeholder">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="search_error_network">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_error_not_found">Ничего не нашлось</string>
    <string name="search_refresh_button">Обновить</string>
    <string name="playlist_create_new">Новый плейлист</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history_btn">Очистить историю</string>
    <string name="zero_timer">00:00</string>
    <string name="medialib_toolbar_title">Медиатека</string>
    <string name="favorite_placeholder">Ваша медиатека пуста</string>
    <string name="playlist_placeholder">Вы не создали\nни одного плейлиста</string>
    <string name="favorite_tab_title">Избранные треки</string>
    <string name="playlist_tab_title">Плейлисты</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="playlist_create_btn">Создать</string>
    <string name="playlist_create_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_create_dialog_msg">Все несохраненные данные будут утеряны</string>
    <string name="playlist_create_dialog_cancel">Отмена</string>
    <string name="playlist_create_dialog_confirm">Завершить</string>
    <string name="playlist_created_msg">Плейлист %1$s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="already_in_playlist">Трек уже добавлен в плейлист %1$s</string>

    <string name="playlist_empty_share_msg">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_delete_dialog_title">Удалить плейлист</string>
    <string name="playlist_delete_dialog_msg">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="playlist_delete_confirm">Удалить</string>
    <string name="track_delete_dialog_title">Удалить трек</string>
    <string name="track_delete_dialog_msg">Хотите удалить трек?</string>
    <string name="no">НЕТ</string>
    <string name="yes">ДА</string>
    <string name="playlist_edit">Редактировать</string>
    <string name="playlist_save">Сохранить</string>
    <string name="playlist_share">Поделиться</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="playlist_edit_info">Редактировать информацию</string>
    <string name="playlist_minutes_placeholder">%1$s минут</string>
    <string name="playlist_empty_tracks_msg">В этом плейлисте нет треков</string>
    <string name="player_duration">Длительность</string>
    <string name="player_album">Альбом</string>
    <string name="player_year">Год</string>
    <string name="player_genre">Жанр</string>
    <string name="player_country">Страна</string>
    <string name="notification_permission_title">Уведомления отключены</string>
    <string name="notification_permission_msg">Чтобы музыка продолжала играть в фоновом режиме, приложению необходимо разрешение на показ уведомлений. Пожалуйста, включите их в настройках.</string>
    <string name="settings">Настройки</string>

    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

</resources>