<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings"
    android:orientation="vertical"
    tools:context=".settings.ui.fragment.SettingsFragment"
    android:background="@color/wb_bg"
    >

    <com.google.android.material.switchmaterial.SwitchMaterial
        style="@style/TextButtonSettings"
        android:id="@+id/vThemeSwitcher"
        android:text="@string/settings_dark_theme"
        android:layout_marginTop="45dp"
        android:layout_marginHorizontal="@dimen/margin16"
        android:layout_marginBottom="0dp"
        android:layout_gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/vShareButton"
        style="@style/TextButtonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_share"
        app:drawableEndCompat="?attr/actionModeShareDrawable" />

    <TextView
        android:id="@+id/vSupportButton"
        style="@style/TextButtonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_support"
        app:drawableEndCompat="@drawable/ic_support_24" />

    <TextView
        style="@style/TextButtonSettings"
        android:id="@+id/vUserAgreementButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_agreement"
        app:drawableEndCompat="@drawable/ic_arrow_forward_24" />

</LinearLayout>