<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation_graph"
    app:startDestination="@id/mediaFragment">

    <fragment
        android:id="@+id/mediaFragment"
        android:name="com.saikou.playlistmaker.media_libr.ui.MediaFragment"
        android:label="@string/medialib_toolbar_title"
        tools:layout="@layout/fragment_medialib" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.saikou.playlistmaker.settings.ui.fragment.SettingsFragment"
        android:label="@string/btn_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_termsFragment"
            app:destination="@id/termsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.saikou.playlistmaker.search.ui.fragment.SearchFragment"
        android:label="@string/btn_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
        <argument
            android:name="Track"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/playerFragment"
        android:name="com.saikou.playlistmaker.player.ui.fragment.PlayerFragment"
        android:label=""
        tools:layout="@layout/fragment_player" />
    <argument android:name="Track" />
    <fragment
        android:id="@+id/termsFragment"
        android:name="com.saikou.playlistmaker.settings.ui.fragment.TermsFragment"
        android:label="@string/terms_title" >
        <argument
            android:name="link"
            app:argType="string" />
    </fragment>
</navigation>