<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wb_bg"
    android:orientation="vertical"
    tools:context=".search.ui.fragment.SearchFragment">

    <ProgressBar
        android:id="@+id/vSearchProgress"
        android:layout_width="@dimen/progress_bar_size_44dp"
        android:layout_height="@dimen/progress_bar_size_44dp"
        android:indeterminateTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vSearchLine"
        android:layout_marginTop="140dp"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/vSearchLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin16"
        android:background="@drawable/shape_et_bubble"
        android:drawableStart="@drawable/ic_search_19"
        android:drawablePadding="8dp"
        android:drawableTint="@color/search_hint"
        android:hint="@string/btn_search"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:focusable="true"
        android:focusedByDefault="true"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/search_hint"
        android:textSize="@dimen/setting_text_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <ImageButton
        android:id="@+id/vClearButton"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/ic_clear_x_16"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/vSearchLine"
        app:layout_constraintEnd_toEndOf="@+id/vSearchLine"
        app:layout_constraintTop_toTopOf="@id/vSearchLine" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vContentWrapper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vSearchLine"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/vHistoryTitle"
            android:textColor="@color/settings_text_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display"
            android:text="@string/search_history_title"
            android:textSize="19sp"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vTrackList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/margin16"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/vClearHistory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vHistoryTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/vClearHistory"
            style="@style/ErrorRefreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            android:text="@string/clear_history_btn"
            app:layout_constraintEnd_toEndOf="@+id/vTrackList"
            app:layout_constraintStart_toStartOf="@+id/vTrackList"
            app:layout_constraintTop_toBottomOf="@+id/vTrackList"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/vSearchPlaceholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="102dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/vPlaceholderImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_error_net_light_120"
                />
            <TextView
                android:id="@+id/vPlaceholderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin16"
                android:textColor="@color/settings_text_button"
                android:fontFamily="@font/ys_display"
                android:textSize="19sp"
                android:text="@string/search_error_network"
                android:textAlignment="center"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/vRefreshButton"
                style="@style/ErrorRefreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_refresh_button" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>